--- a/ElevatorEngineTests/ElevatorEngineTests.csproj
+++ b/ElevatorEngineTests/ElevatorEngineTests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MovingLiftTests.cs" />
     <Compile Include="StartElevatorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInMiddleFloorTests.cs" />
